# aur-grpc

./: .gitignore  README.md  meson.build
src/client/: client.cc  client.hh  main.cc
src/proto/: aur_internal.proto  aur_v1.proto  legacy.proto
src/server/: main.cc  server.cc  server.hh
src/service/internal/: package_index.cc  package_index.hh  package_index_test.cc  parsed_dependency.cc  parsed_dependency.hh  parsed_dependency_test.cc  service_impl.cc  service_impl.hh  service_impl_test.cc
src/service/v1/: conversions.cc  conversions.hh  conversions_test.cc  service.cc  service.hh
src/storage/: file_io.cc  file_io.hh  filesystem_storage.cc  filesystem_storage.hh  inmemory_storage.cc  inmemory_storage.hh  storage.hh
tools/: create_db  json_to_protobuf.cc
